feat(draft): add draftbox in the post write component

--- a/projects/viewer/src/modules/post/pages/post-write/streaming/post-streaming-write.component.html
+++ b/projects/viewer/src/modules/post/pages/post-write/streaming/post-streaming-write.component.html
@@ -2,6 +2,16 @@
   <form class="form h-100" #form="ngForm" (ngSubmit)="submit(form)">
     <div class="row h-100 mx-0">
       <section class="col extra-section sale-sheet-section" id="sale-sheet-section">
+        <div class="input-group">
+          <div class="input-group-prepend">
+            <span class="input-group-text">Draft</span>
+          </div>
+          <select class="form-control" [(ngModel)]="selectedDraftId" (change)="changeDraft()" name="draft-control">
+            <option value="">New</option>
+            <option *ngFor="let draft of drafts | objiter" value="{{draft.key}}">{{draft.value.title}}</option>
+          </select>
+        </div>
+
         <h5> Upload Streaming Music </h5>
 
         <div class="file-select-form" (click)="fileSelector.click();">
@@ -130,7 +140,8 @@
     </div>
 
     <div class="submit-floating">
-      <button mat-raised-button color="accent"><i class="fa fa-pencil"></i> Upload</button>
+      <button type="button" mat-raised-button color="accent" (click)="savePost()"><i class="fa fa-save"></i> Save</button>
+      <button mat-raised-button color="accent" class="ml-2"><i class="fa fa-pencil"></i> Upload</button>
     </div>
   </form>
 </section>
