--- a/projects/viewer/src/modules/post/pages/post-write/streaming/post-streaming-write.component.scss
+++ b/projects/viewer/src/modules/post/pages/post-write/streaming/post-streaming-write.component.scss
@@ -1,1 +1,9 @@
-@import '../../../../../theme/variables';
+h2 {
+  padding: 18px 15px;
+  display: inline-block;
+  vertical-align: middle;
+  line-height: 30px;
+  color: #333;
+  font-size: 18px;
+  font-weight: 500;
+}
