--- a/projects/web/src/modules/intro/components/intro-footer/intro-footer.component.html
+++ b/projects/web/src/modules/intro/components/intro-footer/intro-footer.component.html
@@ -1,25 +1,40 @@
 <footer>
   <div class="container">
-    <div class="row">
-      <div class="col-lg-12">
-        <div class="footer-content">
-          <div class="footer-alt text-center mt-5 mb-4">
-            <brand-icon-muzika></brand-icon-muzika>
-            <p class="mb-0 mt-3">Muzika Foundation</p>
-          </div>
-          <div class="footer-icon mb-3">
-            <ul class="list-unstyled social-icon text-center">
-              <li class="list-inline-item"><a href="javascript:void(0);"><i class="fab fa-facebook"></i></a></li>
-              <li class="list-inline-item"><a href="javascript:void(0);"><i class="fab fa-twitter"></i></a></li>
-              <li class="list-inline-item"><a href="javascript:void(0);"><i class="fab fa-instagram"></i></a></li>
-              <li class="list-inline-item"><a href="javascript:void(0);"><i class="fab fa-github"></i></a></li>
-            </ul>
-          </div>
-          <div class="mb-5 small text-center">
-            Copyright (c) 2018 MUZIKA. All RIghts Reserved
-          </div>
-        </div>
+    <div class="footer-alt text-center pt-5 pb-4">
+      <brand-icon-muzika></brand-icon-muzika>
+      <p class="mb-0 mt-2">Muzika</p>
+    </div>
+    <div class="row submenu pt-5">
+      <div class="col">
+        <h5 class="mb-3">Muzika</h5>
+        <ul class="mb-4 text-center">
+          <li class="mb-2"><a href="javascript:void(0);">Whitepapers</a></li>
+          <li class="mb-2"><a href="javascript:void(0);">Advisors</a></li>
+          <li class="mb-2"><a href="javascript:void(0);">Teams</a></li>
+          <li class="mb-2"><a href="javascript:void(0);">Roadmap</a></li>
+          <li class="mb-2"><a href="javascript:void(0);">Services</a></li>
+        </ul>
       </div>
+      <div class="col">
+        <h5 class="mb-3">Community</h5>
+        <ul class="mb-4 text-center">
+          <li class="mb-2"><a href="javascript:void(0);"><i class="fab fa-medium"></i> Medium</a></li>
+          <li class="mb-2"><a href="javascript:void(0);"><i class="fab fa-twitter"></i> Twitter</a></li>
+          <li class="mb-2"><a href="javascript:void(0);"><i class="fab fa-telegram"></i> Telegram</a></li>
+          <li class="mb-2"><a href="javascript:void(0);"><i class="fab fa-telegram"></i> Telegram (KOR)</a></li>
+          <li class="mb-2"><a href="javascript:void(0);"><i class="fab fa-github"></i> Github</a></li>
+        </ul>
+      </div>
+      <div class="col">
+        <h5 class="mb-3">Websites</h5>
+        <ul class="mb-4 text-center">
+          <li class="mb-2"><a href="javascript:void(0);">English</a></li>
+          <li class="mb-2"><a href="javascript:void(0);">한국어</a></li>
+        </ul>
+      </div>
+    </div>
+    <div class="mb-5 mt-4 small text-center copyright-text">
+      © 2018 MUZIKA. All RIghts Reserved
     </div>
   </div>
 </footer>
