--- a/projects/web/src/modules/intro/components/intro-leadership/intro-leadership.component.html
+++ b/projects/web/src/modules/intro/components/intro-leadership/intro-leadership.component.html
@@ -10,8 +10,9 @@
           </div>
           <h2> LEADERSHIP TEAM</h2>
           <p class="mt-4 text-muted">
-            Co-founders are averagely aged at 22 among the youngest and <BR/>
-            the most successful entrepreneurs in South Korea startup history
+            Co-founders are averagely aged at 22 among <BR/>
+            the youngest and the most successful entrepreneurs  <BR/>
+            in South Korea startup history
           </p>
         </div>
       </div>
@@ -29,7 +30,10 @@
               <h6 class="mb-0">
                 {{leader.name}}
               </h6>
-              <small>{{leader.position}} & Co-Founder</small>
+              <small>
+                {{leader.position}} <BR />
+                & Co-Founder
+              </small>
             </div>
           </div>
           <ul class="pt-3 text-muted small">
