--- a/projects/web/src/modules/intro/pages/intro-main/intro-main.component.html
+++ b/projects/web/src/modules/intro/pages/intro-main/intro-main.component.html
@@ -7,19 +7,25 @@
         <div class="row">
           <div class="col-lg-6">
             <h1 class="home-title mx-auto mt-4">Muzika</h1>
-            <p class="home-subtitle mx-auto pt-2">
-              A blockchain-based self-sustaining ecosystem that will revolutionize the digital music industry.
+            <p class="home-subtitle mx-auto mt-3 mb-4">
+              Revolution and Redemption of Digital Music World <BR />
+              through a decentralized blockchain-based ecosystem.
             </p>
-            <div>
-              <a href="#" class="btn btn-custom btn-round mr-3 mb-3">Whitepaper (ENG)</a>
-              <a href="#" class="btn btn-custom btn-round mr-3 mb-3">Project Teaser (ENG)</a>
-              <a href="#" class="btn btn-custom btn-round mb-3">Project Teaser (KOR)</a>
+            <div class="heme-btn">
+              <a class="mr-3">Project Teaser</a>
+              <a href="#" class="btn btn-custom mr-3">English</a>
+              <a href="#" class="btn btn-custom mr-3">한국어</a>
+              <a href="#" class="btn btn-custom">中國語</a>
+            </div>
+            <div class="heme-btn mt-3">
+              <a class="mr-3">Whitepaper</a>
+              <a href="#" class="btn btn-custom mr-3">English</a>
             </div>
           </div>
           <div class="col-lg-6">
             <div class="videoWrapper">
               <!-- Copy & Pasted from YouTube -->
-              <iframe width="560" height="349" src="//www.youtube.com/embed/Df2JgpM9zQA?rel=0&hd=1" frameborder="0" allowfullscreen></iframe>
+              <iframe width="530" height="315" src="//www.youtube.com/embed/Df2JgpM9zQA?rel=0&hd=1" frameborder="0" allowfullscreen></iframe>
             </div>
           </div>
         </div>
