--- a/projects/viewer/src/components/navbar/navbar.component.scss
+++ b/projects/viewer/src/components/navbar/navbar.component.scss
@@ -5,9 +5,23 @@
   display: block;
 }
 
+nav:after {
+  bottom: -5px;
+  box-shadow: inset 0 4px 8px -3px rgba(17, 17, 17, .06);
+  content: "";
+  height: 5px;
+  left: 0;
+  opacity: 1;
+  pointer-events: none;
+  position: absolute;
+  right: 0;
+  width: 100%;
+  z-index: 2050;
+}
+
 .wallet {
   text-transform: lowercase;
-  color: map-get($secondary-palette, 500);
+  color: black;
 }
 
 .btn-login {
