--- a/projects/web/src/modules/intro/components/intro-navbar/intro-navbar.component.scss
+++ b/projects/web/src/modules/intro/components/intro-navbar/intro-navbar.component.scss
@@ -8,7 +8,7 @@
 .navbar-brand {
   outline: none;
   cursor: pointer;
-  color: #fff;
+  color: black;
   vertical-align: middle;
 
   brand-icon-muzika {
@@ -17,14 +17,6 @@
     margin-top: 3px;
     margin-right: 15px;
     height: $navbar-brand-size;
-
-    /deep/ .muzika-icon-striped-primary {
-      fill: $brand-color-1;
-    }
-
-    /deep/ .muzika-icon-striped-secondary {
-      fill: $brand-color-2;
-    }
   }
 
   span {
@@ -46,7 +38,7 @@
 
 @media (min-width: 200px) and (max-width: 768px) {
   .navbar-custom {
-    background-color: #262829;
+    background-color: white;
     padding: 10px 0px !important;
   }
   .navbar-custom .container {
@@ -92,7 +84,7 @@
 **********************/
 
 .navbar-custom {
-  background: #333030;
+  background: white;
   padding: 12px 0;
   width: 100%;
   border-radius: 0;
@@ -105,13 +97,17 @@
 }
 
 .navbar-custom .navbar-nav li > a {
-  color: #fff;
+  color: #878d91;
   font-size: 14px;
   background-color: transparent;
   margin: 0 5px;
   letter-spacing: 0.03em;
   line-height: 24px;
   transition: all 0.5s;
+
+  &:hover {
+    color: #4d5256;
+  }
 }
 
 .navbar-custom .logo img {
@@ -135,17 +131,16 @@
 }
 
 .navbar-custom .navbar-brand {
-  color: #fff;
   font-family: libre baskerville, serif;
   letter-spacing: 2px;
 }
 
 .navbar-custom .nav-social li > a {
-  color: #fff;
+  color: black;
 }
 
 .navbar-custom .navbar-toggler {
-  color: #fff;
+  color: black;
   font-size: 23px;
   padding: 0px;
 }
@@ -167,7 +162,6 @@
 .nav-sticky .navbar-brand {
   color: #000;
   brand-icon-muzika {
-
     /deep/ .muzika-icon-striped-primary {
       fill: black;
     }
@@ -182,4 +176,18 @@
   .dropdown-menu a.dropdown-item {
     color: black;
   }
+}
+
+.navbar:after {
+  bottom: -5px;
+  box-shadow: inset 0 4px 8px -3px rgba(17, 17, 17, .06);
+  content: "";
+  height: 5px;
+  left: 0;
+  opacity: 1;
+  pointer-events: none;
+  position: absolute;
+  right: 0;
+  width: 100%;
+  z-index: 2050;
 }
