--- a/projects/web/src/modules/intro/components/intro-team/intro-team.component.html
+++ b/projects/web/src/modules/intro/components/intro-team/intro-team.component.html
@@ -8,7 +8,7 @@
           <div class="section-title-icon">
             <i class="pe-7s-like2 text-custom"></i>
           </div>
-          <h2>STAFF TEAM</h2>
+          <h2>MEET OUR TEAM</h2>
         </div>
       </div>
     </div>
