--- a/projects/web/src/modules/intro/components/intro-team/intro-team.component.scss
+++ b/projects/web/src/modules/intro/components/intro-team/intro-team.component.scss
@@ -1,4 +1,8 @@
 
+h2 {
+  font-weight: 700;
+}
+
 section {
   border-top: 1px solid #d4d4d4;
   .team-box {
@@ -10,7 +14,7 @@ section {
       }
     }
 
-    .team-desc  {
+    .team-desc {
       .team-name {
         font-size: 14px;
       }
