refactor(intro-main): define scss preprocessor for global ui/ux unify

--- a/projects/web/src/modules/intro/pages/intro-main/intro-main.component.html
+++ b/projects/web/src/modules/intro/pages/intro-main/intro-main.component.html
@@ -7,17 +7,17 @@
         <div class="row">
           <div class="col-lg-6">
             <h1 class="home-title mx-auto mt-4">Muzika</h1>
-            <p class="home-subtitle mx-auto mt-3 mb-4">
-              Revolution and Redemption of Digital Music World <BR />
+            <p class="home-subtitle mx-auto mt-3 mb-5">
+              Revolution and Redemption of Digital Music World <BR/>
               through a decentralized blockchain-based ecosystem.
             </p>
-            <div class="heme-btn">
+            <div class="home-btn">
               <a class="mr-3">Project Teaser</a>
               <a href="#" class="btn btn-custom mr-3">English</a>
               <a href="#" class="btn btn-custom mr-3">한국어</a>
               <a href="#" class="btn btn-custom">中國語</a>
             </div>
-            <div class="heme-btn mt-3">
+            <div class="home-btn mt-3">
               <a class="mr-3">Whitepaper</a>
               <a href="#" class="btn btn-custom mr-3">English</a>
             </div>
@@ -25,7 +25,8 @@
           <div class="col-lg-6">
             <div class="videoWrapper">
               <!-- Copy & Pasted from YouTube -->
-              <iframe width="530" height="315" src="//www.youtube.com/embed/Df2JgpM9zQA?rel=0&hd=1" frameborder="0" allowfullscreen></iframe>
+              <iframe width="530" height="315" src="//www.youtube.com/embed/Df2JgpM9zQA?rel=0&hd=1" frameborder="0"
+                      allowfullscreen></iframe>
             </div>
           </div>
         </div>
@@ -36,22 +37,6 @@
 
 </section>
 <!-- home end -->
-
-
-<!-- Cta  Start-->
-<section class="section bg-cta">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-9 critarea-desc mt-3 mb-3">
-        <h5>Sync with Muzika, the redemption of the music world.</h5>
-      </div>
-      <div class="col-lg-3 mt-4 mb-3 text-right">
-        <a href="#" class="btn btn-outline-custom">Get Started</a>
-      </div>
-    </div>
-  </div>
-</section>
-<!-- Cta end  -->
 
 <intro-leadership-team></intro-leadership-team>
 
