--- a/projects/web/src/styles.scss
+++ b/projects/web/src/styles.scss
@@ -2,7 +2,6 @@
 @import url(//fonts.googleapis.com/earlyaccess/notosanskr.css);
 @import 'theme/variables';
 
-
 /* Customize Bootstrap */
 $primary: $primary-color;
 $secondary: $secondary-color;
@@ -204,4 +203,22 @@ button:focus {
 .pagination-sm > li:last-child > span {
   border-bottom-right-radius: 0;
   border-top-right-radius: 0;
+}
+
+
+/**
+ * HELPER for Intro
+ **/
+@import 'helper';
+
+h2.intro-section-title {
+  font-size: $px2rem_48;
+  font-weight: 700;
+  color: #333030;
+}
+
+p.intro-section-subtitle {
+  font-size: $px2rem_18;
+  font-weight: 400;
+  color: #4d5256;
 }
