--- a/projects/web/src/modules/intro/components/intro-leadership/intro-leadership.component.html
+++ b/projects/web/src/modules/intro/components/intro-leadership/intro-leadership.component.html
@@ -1,21 +1,16 @@
-
 <!-- LEADERSHIP TEAM Start -->
 <section class="section" id="leadership-team">
   <div class="container">
-    <div class="row">
-      <div class="col-lg-12">
-        <div class="section-title text-center mx-auto">
-          <div class="section-title-icon">
-            <i class="pe-7s-micro text-custom"></i>
-          </div>
-          <h2> LEADERSHIP TEAM</h2>
-          <p class="mt-4 text-muted">
-            Co-founders are averagely aged at 22 among <BR/>
-            the youngest and the most successful entrepreneurs  <BR/>
-            in South Korea startup history
-          </p>
-        </div>
+    <div class="section-title text-center mx-auto">
+      <div class="section-title-icon">
+        <i class="pe-7s-micro text-custom"></i>
       </div>
+      <h2 class="intro-section-title"> LEADERSHIP TEAM</h2>
+      <p class="mt-4 intro-section-subtitle">
+        Co-founders are averagely aged at 22 among <BR/>
+        the youngest and the most successful entrepreneurs <BR/>
+        in South Korea startup history
+      </p>
     </div>
     <div class="row mt-5">
       <div class="col-lg-4" *ngFor="let leader of leaders">
@@ -31,7 +26,7 @@
                 {{leader.name}}
               </h6>
               <small>
-                {{leader.position}} <BR />
+                {{leader.position}} <BR/>
                 & Co-Founder
               </small>
             </div>
