feat(intro): add business, mzk-coin, ecosystem section on intro site

--- a/projects/web/src/modules/intro/pages/intro-main/intro-main.component.html
+++ b/projects/web/src/modules/intro/pages/intro-main/intro-main.component.html
@@ -38,6 +38,14 @@
 </section>
 <!-- home end -->
 
+<mzk-intro-business></mzk-intro-business>
+
+<mzk-intro-ecosystem></mzk-intro-ecosystem>
+
+<mzk-intro-mzk-coins></mzk-intro-mzk-coins>
+
+<mzk-intro-investor></mzk-intro-investor>
+
 <intro-leadership-team></intro-leadership-team>
 
 <intro-team></intro-team>
