refactor(intro-business): add highlight text

--- a/projects/web/src/modules/intro/components/intro-footer/intro-footer.component.scss
+++ b/projects/web/src/modules/intro/components/intro-footer/intro-footer.component.scss
@@ -2,7 +2,7 @@
 
 :host {
   display: block;
-  background-color: #35495e;
+  background-color: #303740;
   color: white;
   border-top: 1px solid #edeff2;
 }
@@ -19,7 +19,7 @@ footer {
     color: white;
     font-family: 'Libre Baskerville';
     font-size: 26px;
-    font-weight: 700;
+    font-weight: 500;
   }
 
   .company {
