refactor(intro): add forbes logo and switch sequence of components

--- a/projects/web/src/modules/intro/components/intro-advisors/mzk-intro-advisors.component.scss
+++ b/projects/web/src/modules/intro/components/intro-advisors/mzk-intro-advisors.component.scss
@@ -3,6 +3,10 @@ h2 {
   font-weight: 700;
 }
 
+section {
+  border-top: 1px solid #d4d4d4;
+}
+
 .testimonial-client-img {
   width: 130px;
   height: 130px;
