--- a/projects/web/src/modules/intro/components/intro-footer/intro-footer.component.html
+++ b/projects/web/src/modules/intro/components/intro-footer/intro-footer.component.html
@@ -4,8 +4,8 @@
       <brand-icon-muzika></brand-icon-muzika>
       <p class="mb-0 mt-2">Muzika</p>
     </div>
-    <div class="row submenu pt-5">
-      <div class="col">
+    <div class="row submenu pt-5 pl-5">
+      <div class="col pl-4">
         <h5 class="mb-3">Muzika</h5>
         <ul class="mb-4 text-center">
           <li class="mb-2"><a href="javascript:void(0);">Whitepapers</a></li>
@@ -15,7 +15,7 @@
           <li class="mb-2"><a href="javascript:void(0);">Services</a></li>
         </ul>
       </div>
-      <div class="col">
+      <div class="col pl-4">
         <h5 class="mb-3">Community</h5>
         <ul class="mb-4 text-center">
           <li class="mb-2"><a href="javascript:void(0);"><i class="fab fa-medium"></i> Medium</a></li>
