--- a/projects/web/src/modules/intro/components/intro-leadership/mzk-intro-leadership.component.html
+++ b/projects/web/src/modules/intro/components/intro-leadership/mzk-intro-leadership.component.html
@@ -31,15 +31,20 @@
               </small>
             </div>
           </div>
-          <ul class="pt-3 text-muted small">
+          <ul class="pt-3 small">
             <li class="mt-2" *ngFor="let sentence of leader.sentences; let i =index;">
               {{sentence}}
             </li>
           </ul>
         </div>
       </div>
-
     </div>
+    <p class="awards">
+      Awards
+      <a href="https://www.forbes.com/30-under-30-asia/2018/#33f954aa5aeb">
+        <img src="assets/images/forbes.png" class="ml-3" height="60">
+      </a>
+    </p>
   </div>
 </section>
 <!-- LEADERSHIP TEAM end  -->
