--- a/projects/web/src/modules/intro/components/intro-roadmap/mzk-intro-roadmap.component.html
+++ b/projects/web/src/modules/intro/components/intro-roadmap/mzk-intro-roadmap.component.html
@@ -48,9 +48,9 @@
           <li *ngFor="let timeline of timelineList; let i = index" [attr.data-index]="i" [class.selected]="timeline.selected" [attr.data-date]="timeline.date">
             <h2>{{timeline.title}}</h2>
             <em>{{timeline.subtitle}}</em>
-            <p>
-              {{timeline.description}}
-            </p>
+            <!--<p>-->
+              <!--{{timeline.description}}-->
+            <!--</p>-->
           </li>
 
         </ol>
