--- a/projects/web/src/modules/intro/components/intro-team/mzk-intro-team.component.html
+++ b/projects/web/src/modules/intro/components/intro-team/mzk-intro-team.component.html
@@ -18,9 +18,9 @@
           <div class="team-img mr-2">
             <img [src]="'assets/images/team/' + member.image" alt="" class="mx-auto d-block rounded-circle " height="90">
           </div>
-          <div class="team-desc text-center mt-4 pl-1">
+          <div class="team-desc text-left mt-4">
             <h6 class="team-name text-custom mb-1">{{member.name}}</h6>
-            <p class="team-work text-muted">{{member.position}}</p>
+            <p class="team-position text-muted">{{member.position}}</p>
           </div>
         </div>
       </div>
