--- a/projects/web/src/modules/intro/components/intro-team/mzk-intro-team.component.scss
+++ b/projects/web/src/modules/intro/components/intro-team/mzk-intro-team.component.scss
@@ -15,10 +15,11 @@ section {
     }
 
     .team-desc {
+      padding-left: 115px;
       .team-name {
         font-size: 14px;
       }
-      .team-work {
+      .team-position {
         font-size: 12px;
       }
     }
