--- a/projects/web/src/modules/intro/components/intro-leadership/mzk-intro-leadership.component.scss
+++ b/projects/web/src/modules/intro/components/intro-leadership/mzk-intro-leadership.component.scss
@@ -4,14 +4,20 @@
   margin: 0 0 0 auto;
 }
 
+section {
+  border-top: 1px solid #d4d4d4;
+}
+
 ul {
   padding-left: 0;
+  color: #4d5256;
 
   li {
     word-break: break-all;
-
-    &:first-child {
-      font-weight:bold;
-    }
   }
+}
+
+
+.awards {
+  color: #4d5256;
 }
