feat(ci): upload ./dist/web/ to aws s3

--- a/projects/web/src/modules/intro/components/intro-leadership/mzk-intro-leadership.component.html
+++ b/projects/web/src/modules/intro/components/intro-leadership/mzk-intro-leadership.component.html
@@ -41,7 +41,7 @@
     </div>
     <p class="awards">
       Awards
-      <a href="https://www.forbes.com/30-under-30-asia/2018/#33f954aa5aeb">
+      <a href="https://www.forbes.com/30-under-30-asia/2018/#33f954aa5aeb" target="_blank">
         <img src="assets/images/forbes.png" class="ml-3" height="60">
       </a>
     </p>
