refactor(navbar): add new menus

--- a/projects/web/src/modules/intro/pages/intro-main/intro-main.component.html
+++ b/projects/web/src/modules/intro/pages/intro-main/intro-main.component.html
@@ -13,20 +13,21 @@
             </p>
             <div class="home-btn">
               <a class="mr-3">Project Teaser</a>
-              <a href="#" class="btn btn-custom mr-3">English</a>
-              <a href="#" class="btn btn-custom mr-3">한국어</a>
-              <a href="#" class="btn btn-custom">中國語</a>
+              <a href="assets/mzk-teaser-en.pdf" class="btn btn-custom mr-3">English</a>
+              <a href="assets/mzk-teaser-kr.pdf" class="btn btn-custom mr-3">한국어</a>
+              <a href="assets/mzk-teaser-ch.pdf" class="btn btn-custom">中國語</a>
             </div>
             <div class="home-btn mt-3">
               <a class="mr-3">Whitepaper</a>
-              <a href="#" class="btn btn-custom mr-3">English</a>
+              <a href="assets/mzk-whitepaper-en.pdf" class="btn btn-custom mr-3">English</a>
             </div>
           </div>
           <div class="col-lg-6">
             <div class="videoWrapper">
               <!-- Copy & Pasted from YouTube -->
-              <iframe width="530" height="315" src="//www.youtube.com/embed/Df2JgpM9zQA?rel=0&hd=1" frameborder="0"
-                      allowfullscreen></iframe>
+              <img src="assets/images/video-thumbnail.jpg" width="530" height="315">
+              <!--<iframe width="530" height="315" src="//www.youtube.com/embed/Df2JgpM9zQA?rel=0&hd=1" frameborder="0"-->
+                      <!--allowfullscreen></iframe>-->
             </div>
           </div>
         </div>
