--- a/projects/web/src/modules/intro/pages/intro-main/intro-main.component.scss
+++ b/projects/web/src/modules/intro/pages/intro-main/intro-main.component.scss
@@ -61,12 +61,13 @@
   padding-top: 25px;
   height: 0;
 }
-.videoWrapper iframe {
+.videoWrapper img {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
+  border-radius: 10px 10px;
 }
 
 .btn {
