--- a/projects/web/src/modules/intro/components/intro-navbar/intro-navbar.component.html
+++ b/projects/web/src/modules/intro/components/intro-navbar/intro-navbar.component.html
@@ -11,7 +11,13 @@
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#home">White Paper</a>
+          <a class="nav-link" href="#ecosystem">Ecosystem</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#mzk-coins">MZK Coin Usage</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#investor">Investors</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#leadership-team">Team</a>
