refactor(intro): redesign & typo refactoring

--- a/projects/web/src/modules/intro/components/intro-advisors/mzk-intro-advisors.component.html
+++ b/projects/web/src/modules/intro/components/intro-advisors/mzk-intro-advisors.component.html
@@ -8,7 +8,7 @@
           <div class="section-title-icon">
             <i class="pe-7s-micro text-custom"></i>
           </div>
-          <h2> ADVISORS </h2>
+          <h2 class="intro-section-title"> ADVISORS </h2>
         </div>
       </div>
     </div>
