--- a/projects/web/src/modules/intro/components/intro-footer/intro-footer.component.html
+++ b/projects/web/src/modules/intro/components/intro-footer/intro-footer.component.html
@@ -8,25 +8,25 @@
       <div class="col pl-4">
         <h5 class="mb-3">Muzika</h5>
         <ul class="mb-4 text-center">
-          <li class="mb-2"><a href="javascript:void(0);">Whitepapers</a></li>
-          <li class="mb-2"><a href="javascript:void(0);">Advisors</a></li>
-          <li class="mb-2"><a href="javascript:void(0);">Teams</a></li>
-          <li class="mb-2"><a href="javascript:void(0);">Roadmap</a></li>
-          <li class="mb-2"><a href="javascript:void(0);">Services</a></li>
+          <li class="mb-2"><a href="#home">{{'intro-footer.whitepapers' | translate}}</a></li>
+          <li class="mb-2"><a href="#advisors">{{'intro-footer.advisors' | translate}}</a></li>
+          <li class="mb-2"><a href="#teams">{{'intro-footer.teams' | translate}}</a></li>
+          <li class="mb-2"><a href="#roadmap">{{'intro-footer.roadmap' | translate}}</a></li>
+          <li class="mb-2"><a routerLink="/beta">{{'intro-footer.services' | translate}}</a></li>
         </ul>
       </div>
       <div class="col pl-4">
-        <h5 class="mb-3">Community</h5>
+        <h5 class="mb-3">{{'intro-footer.community' | translate}}</h5>
         <ul class="mb-4 text-center">
-          <li class="mb-2"><a href="javascript:void(0);"><i class="fab fa-medium"></i> Medium</a></li>
-          <li class="mb-2"><a href="javascript:void(0);"><i class="fab fa-twitter"></i> Twitter</a></li>
-          <li class="mb-2"><a href="javascript:void(0);"><i class="fab fa-telegram"></i> Telegram</a></li>
-          <li class="mb-2"><a href="javascript:void(0);"><i class="fab fa-telegram"></i> Telegram (KOR)</a></li>
-          <li class="mb-2"><a href="javascript:void(0);"><i class="fab fa-github"></i> Github</a></li>
+          <li class="mb-2"><a href="javascript:void(0);"><i class="fab fa-medium"></i> {{'intro-footer.medium' | translate}}</a></li>
+          <li class="mb-2"><a href="javascript:void(0);"><i class="fab fa-twitter"></i> {{'intro-footer.twitter' | translate}}</a></li>
+          <li class="mb-2"><a href="https://t.me/muzika_english"><i class="fab fa-telegram"></i> {{'intro-footer.telegram' | translate}}</a></li>
+          <li class="mb-2"><a href="javascript:void(0);"><i class="fab fa-telegram"></i> {{'intro-footer.telegram-kr' | translate}}</a></li>
+          <li class="mb-2"><a href="https://github.com/MuzikaFoundation" target="_blank"><i class="fab fa-github"></i> Github</a></li>
         </ul>
       </div>
       <div class="col">
-        <h5 class="mb-3">Websites</h5>
+        <h5 class="mb-3">{{'intro-footer.websites' | translate}}</h5>
         <ul class="mb-4 text-center">
           <li class="mb-2"><a href="javascript:void(0);">English</a></li>
           <li class="mb-2"><a href="javascript:void(0);">한국어</a></li>
@@ -34,7 +34,7 @@
       </div>
     </div>
     <div class="mb-5 mt-4 small text-center copyright-text">
-      © 2018 MUZIKA. All RIghts Reserved
+      © 2018 MUZIKA. All Rights Reserved
     </div>
   </div>
 </footer>
