--- a/projects/web/src/modules/intro/components/intro-leadership/mzk-intro-leadership.component.html
+++ b/projects/web/src/modules/intro/components/intro-leadership/mzk-intro-leadership.component.html
@@ -5,11 +5,10 @@
       <div class="section-title-icon">
         <i class="pe-7s-micro text-custom"></i>
       </div>
-      <h2 class="intro-section-title"> LEADERSHIP TEAM</h2>
+      <h2 class="intro-section-title"> TEAM LEADERSHIP </h2>
       <p class="mt-4 intro-section-subtitle">
-        Co-founders are averagely aged at 22 among <BR/>
-        the youngest and the most successful entrepreneurs <BR/>
-        in South Korea startup history
+        Co-founders are one of the youngest and most successful entrepreneurs in South Korea startup history, averagely aged at 22. <BR />
+        All of them were awarded Forbes 30 Under 30 Asia 2018.
       </p>
     </div>
     <div class="row mt-5">
@@ -31,7 +30,7 @@
               </small>
             </div>
           </div>
-          <ul class="pt-3 small">
+          <ul class="pt-3">
             <li class="mt-2" *ngFor="let sentence of leader.sentences; let i =index;">
               {{sentence}}
             </li>
