--- a/projects/web/src/modules/intro/components/intro-leadership/mzk-intro-leadership.component.scss
+++ b/projects/web/src/modules/intro/components/intro-leadership/mzk-intro-leadership.component.scss
@@ -1,11 +1,8 @@
+
 .testimonial-client-img {
   width: 130px;
   height: 130px;
   margin: 0 0 0 auto;
-}
-
-section {
-  border-top: 1px solid #d4d4d4;
 }
 
 ul {
@@ -14,6 +11,7 @@ ul {
 
   li {
     word-break: break-all;
+    font-size: 14px;
   }
 }
 
