--- a/projects/web/src/modules/intro/components/intro-team/mzk-intro-team.component.scss
+++ b/projects/web/src/modules/intro/components/intro-team/mzk-intro-team.component.scss
@@ -4,7 +4,7 @@ h2 {
 }
 
 section {
-  border-top: 1px solid #d4d4d4;
+  padding-top: 0 !important;
   .team-box {
     .team-img {
       float: left;
